--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="jumbotron">
-                <h2 class="display-6"><a href="{{this.link}}" id="titleHeading" target="_blank">{{this.title}}</a></h2>
+                <h2 class="display-6"><a href="{{this.link}}" class="titleHeading" target="_blank">{{this.title}}</a></h2>
                 <hr class="my-4">
                 <p id="authorName">Written By: {{this.author}}</p>
                 <img src="{{this.img}}" id="articleImage"></img>
